--- a/angular/resup/src/app/authentication/login/login.component.html
+++ b/angular/resup/src/app/authentication/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>Sign Up</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form (ngSubmit)="onSubmit()" #signupForm="ngForm">
+        <mat-form-field>
+          <input matInput placeholder="Password" name="password" [(ngModel)]="userData.client_password" type="password" required>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Email" name="email" [(ngModel)]="userData.email" type="email" required>
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit" [disabled]="!signupForm.form.valid">Sign Up</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
