--- a/angular/resup/src/app/authentication/login/login.component.html
+++ b/angular/resup/src/app/authentication/login/login.component.html
@@ -13,4 +13,6 @@
         <button mat-raised-button color="primary" type="submit" [disabled]="!signupForm.form.valid">Sign Up</button>
       </form>
     </mat-card-content>
+    <button (click)="signup()">Sign Up</button>
+
   </mat-card>
