--- a/angular/resup/src/app/authentication/signup/signup.component.html
+++ b/angular/resup/src/app/authentication/signup/signup.component.html
@@ -19,5 +19,8 @@
         <button mat-raised-button color="primary" type="submit" [disabled]="!signupForm.form.valid">Sign Up</button>
       </form>
     </mat-card-content>
+    <!-- app.component.html -->
+<button (click)="signup()">login</button>
+
   </mat-card>
   {{createdUser}}
