--- a/angular/resup/src/app/authentication/signup/signup.component.html
+++ b/angular/resup/src/app/authentication/signup/signup.component.html
@@ -1,26 +1,35 @@
-<mat-card>
-    <mat-card-header>
-      <mat-card-title>Sign Up</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form (ngSubmit)="onSubmit()" #signupForm="ngForm">
-        <mat-form-field>
-          <input matInput placeholder="First Name" name="firstName" [(ngModel)]="userData.first_name" required>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput placeholder="Last Name" name="lastName" [(ngModel)]="userData.last_name" required>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput placeholder="Password" name="password" [(ngModel)]="userData.client_password" type="password" required>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput placeholder="Email" name="email" [(ngModel)]="userData.email" type="email" required>
-        </mat-form-field>
-        <button mat-raised-button color="primary" type="submit" [disabled]="!signupForm.form.valid">Sign Up</button>
-      </form>
-    </mat-card-content>
-    <!-- app.component.html -->
-<button (click)="signup()">login</button>
-
-  </mat-card>
-  {{createdUser}}
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <h5 class="card-title">Sign Up</h5>
+        </div>
+        <div class="card-body">
+          <form (ngSubmit)="onSubmit()" #signupForm="ngForm">
+            <div class="mb-3">
+              <label for="firstName" class="form-label">First Name</label>
+              <input class="form-control" id="firstName" placeholder="First Name" name="firstName" [(ngModel)]="userData.first_name" required>
+            </div>
+            <div class="mb-3">
+              <label for="lastName" class="form-label">Last Name</label>
+              <input class="form-control" id="lastName" placeholder="Last Name" name="lastName" [(ngModel)]="userData.last_name" required>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input class="form-control" id="password" placeholder="Password" name="password" [(ngModel)]="userData.client_password" type="password" required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input class="form-control" id="email" placeholder="Email" name="email" [(ngModel)]="userData.email" type="email" required>
+            </div>
+            <button class="btn btn-primary" type="submit" [disabled]="!signupForm.form.valid">Sign Up</button>
+          </form>
+        </div>
+        <div class="card-footer">
+          <button class="btn btn-secondary" (click)="signup()">Login</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
