--- a/angular/resup/src/app/navbar/navbar.component.html
+++ b/angular/resup/src/app/navbar/navbar.component.html
@@ -10,23 +10,16 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="roadmap_button()">road map</a>
+          <a class="nav-link" (click)="roadmapButton()">road map</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
+        <li *ngIf="canWriteRef" class="nav-item">
+          <a class="nav-link" (click)="referenceButton()">form</a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link disabled" href="#">chat room</a>
         </li>
-        <p style="color:yellow"> version: 0.5.0    please check the road map for reason and progress report</p>
+        <p style="color:yellow"> version: 1    please check the road map for reason and progress report</p>
       </ul>
 
       <form class="form-inline my-2 my-lg-0">
