able to create a reference -> needs to still reload changes

--- a/angular/resup/src/app/admin/admin.component.html
+++ b/angular/resup/src/app/admin/admin.component.html
@@ -6,8 +6,9 @@
   
     <!-- Second div taking half the screen -->
     <div class="col-md-6">
+      <h5 >{{didUpdate}}</h5>9
       <div *ngFor="let user of users">
-        <h5 >{{didUpdate}}</h5>
+
         <div class="card flex-row">
           
           <div class="card-body">
