--- a/angular/resup/src/app/navbar-folder/road-map/road-map.component.html
+++ b/angular/resup/src/app/navbar-folder/road-map/road-map.component.html
@@ -1,4 +1,59 @@
-<p> </p>
-<p>currentl working cleaning up </p>
-<p>currentl working cleaning up </p>
-<p>currentl working cleaning up </p>
+<div class="container">
+    <div class="roadmap-section">
+      <h1>Part 1: Completed</h1>
+      <ul class="list-group">
+        <li class="list-group-item">Create basic template for my resume with Angular</li>
+        <li class="list-group-item">Create basic backend for serving Angular</li>
+        <li class="list-group-item">Create Docker image</li>
+        <li class="list-group-item">
+          Connect AWS
+          <ul class="list-group">
+            <li class="list-group-item">Create AWS account</li>
+            <li class="list-group-item">RDS created</li>
+            <li class="list-group-item">ECR created</li>
+            <li class="list-group-item">ECS task created</li>
+            <li class="list-group-item">ECR created</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  
+    <div class="roadmap-section">
+      <h1>Part 2: Completed</h1>
+      <ul class="list-group">
+        <li class="list-group-item">
+          Rework the AWS to lower personal cost and increase safety
+          <ul class="list-group">
+            <li class="list-group-item">Moved to private subnets</li>
+            <li class="list-group-item">Removed duplication</li>
+            <li class="list-group-item">Load balancer and Route 53</li>
+          </ul>
+        </li>
+        <li class="list-group-item">Create reference page for employers to write a reference</li>
+        <li class="list-group-item">
+          Admin
+          <ul class="list-group">
+            <li class="list-group-item">Load balancer and Route 53</li>
+            <li class="list-group-item">Allow me to delete users</li>
+            <li class="list-group-item">Give permission for users to write a reference for me</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  
+    <div class="roadmap-section">
+      <h1>Part 3: Completed</h1>
+      <ul class="list-group">
+        <li class="list-group-item">
+          Enhance frontend
+          <ul class="list-group">
+            <li class="list-group-item">Fix the sidebar on the homepage</li>
+            <li class="list-group-item">Add emailing for clients to Jordan Garske emails</li>
+            <li class="list-group-item">ECS task created</li>
+            <li class="list-group-item">ECR created</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+  
