--- a/angular/resup/src/app/navbar-folder/home/home.component.scss
+++ b/angular/resup/src/app/navbar-folder/home/home.component.scss
@@ -1,63 +1,39 @@
-*{
-    background-color: #161616;
+* {
+  background-color: #161616;
 }
-/* */
-.containers{
-    display: flex;    
-    background-color: #161616;
-    .information:nth-child(1) {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        flex: 10%;
-      }
-    .information:nth-child(2) {
-        flex: 60%;
-      }
-      
-      .information:nth-child(3) {
-        flex: 20%;
-      }
-    div{
-        color: aliceblue;
-       
-        div{
-            margin: 4px;
-            background-color: #161616;
-            p{
-              color:   #4EB981;
-            }
-        }
-        .work-knowledge{
-            color:   #69e7a6;
-        }
-    }
-
-   
+p{
+  color: aliceblue;
+}
+.qualificationResumeContainer {
+  display: grid;
+  grid-template-columns: repeat(64, 1fr); /* Two columns */
+  grid-template-rows: auto auto; /* Two rows, adjust as needed */
+  gap: 10px; /* Adjust the gap between items as needed */
 }
 
-h6{
-    color:   #acacac;
-}
-h1{
-    color:yellow;
-}
-#spacer{
-    background-color: rgb(47, 137, 92);
-    height: 1px;
-    width: 100%;
-}
-.information 
- 
-  /* Hover effect with shadow */
-img {
-    box-shadow: 0 0 10px rgba(66, 62, 62, 0.9); /* Adjust the shadow values as needed */
-  }
-i {
+.qualificationResumeContainerBox:nth-child(1) {
+  grid-column: 1 / span 4;
+  grid-row: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  i {
     color:   #4EB981;
 }
-footer{
-    height: 100%;
-    width: 100%;
-    background-color: #161616;
+}
+
+
+.qualificationResumeContainerBox:nth-child(2) {
+  grid-column: 5/ span 19;
+  grid-row: 1; /* Second row */
+}
+
+.qualificationResumeContainerBox:nth-child(3) {
+  grid-column:24 / span 40;
+  grid-row: 1; /* Second row */
+}
+
+.qualificationResumeContainerBox:nth-child(4) {
+  grid-column: 5 / span 59; /* Span two columns */
+  grid-row: 2; /* Third row */
 }
