--- a/angular/resup/src/app/navbar-folder/home/resume-qualification/resume-qualification.component.html
+++ b/angular/resup/src/app/navbar-folder/home/resume-qualification/resume-qualification.component.html
@@ -1,66 +1,27 @@
-<div>
-  <!--self prottrait -->
-  <div id="margin">
-    <h1>ABOUT ME</h1>
-    <p>21 / fargo - north dakota / computer science</p>
-  </div>
-  <div id="spacer"></div>
-  <!--programming skills -->
-  <div>
-    <h1>skills</h1>
-    <div class="container">
-      <div class="row">
-        <div class="col work-knowledge">
-          <h4>languages</h4>
-          <h6>
-            Java, Python, Rust, Typescipt, Javascript, C#, and visual basic
-          </h6>
-        </div>
-        <div class="col work-knowledge">
-            <h4>Software</h4>
-            <h6>
-                Ubunut Linux, Docker, AWS  
-            </h6>
-        </div>
-        <div class="w-100"></div>
-        <div class="col work-knowledge">
-            <h4>other</h4>
-            <h6>
-                Angular , Postgres, Django, Rocket, and Diesel 
-            </h6>
-        </div>
-        <div class="col work-knowledge">
-          <h4>thing</h4>
-          <h6>
-             temp, temp, temp, and temp
-          </h6>
-        </div>
-      </div>
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-md-5 d-flex flex-column hover-box spacing-margin">
+      <i class="fas fa-laptop"></i>
+      <h4>Languages</h4>
+      <h6>Java, Python, Rust, TypeScript, JavaScript, C#, and Visual Basic</h6>
+    </div>
+    <div class="col-md-5 d-flex flex-column hover-box">
+      <i class="fab fa-uncharted"></i>
+
+      <h4>Other</h4>
+      <h6>Angular, Postgres, Django, Rocket, and Diesel</h6>
     </div>
   </div>
-  <div id="spacer"></div>
-  <!--classes I have taken -->
-  <div>
-    <ol>
-      <li>Algorithm analysis</li>
-      <li>Probability and statistics</li>
-      <li>Machine learning</li>
-      <li>Database</li>
-      <li>Unix</li>
-      <li>Networking and parallel computation</li>
-    </ol>
-  </div>
-  <div id="spacer"></div>
-  <!--work exerience -->
-  <div>
-    <h1>work history</h1>
-    <h4>PRODUCT MANAGMMENT APPLICATION CO-OP, FARGO ND</h4>
-    <p>
-      From 01/2023 to 12/2023 Contributed to the optimization of implementation
-      processes, resulting in significant reductions in implementation time
-      Collaborated with product management team by collecting and analyzing data
-      to support decision-making Creating and maintaining reports tailored to
-      the needs of proudct managers
-    </p>
+  <div class="row justify-content-center">
+    <div class="col-md-5 d-flex flex-column hover-box spacing-margin">
+      <i class="fas fa-bolt"></i>
+      <h4>Other</h4>
+      <h6>Angular, Postgres, Django, Rocket, and Diesel</h6>
+    </div>
+    <div class="col-md-5 d-flex flex-column hover-box">
+      <i class="fas fa-question"></i>
+      <h4>Thing</h4>
+      <h6>Temp, Temp, Temp, and Temp</h6>
+    </div>
   </div>
 </div>
