--- a/angular/resup/src/app/navbar/navbar.component.html
+++ b/angular/resup/src/app/navbar/navbar.component.html
@@ -1,32 +1,46 @@
-<nav class="navbar navbar-expand-lg navbar-dark ">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
- 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="roadmapButton()">road map</a>
-        </li>
-        <li *ngIf="canWriteRef" class="nav-item">
-          <a class="nav-link" (click)="referenceButton()">form</a>
-        </li>
+<div class="container-fuild bg-img w-100">
+  <div class="row justify-content-center">
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" routerLink="/home">Rustume</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">chat room</a>
-        </li>
-        <p style="color:yellow"> version: 1    please check the road map for reason and progress report</p>
-      </ul>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/home"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/home/roadmap">Roadmap</a>
+          </li>
+          <li *ngIf="canWriteRef" class="nav-item">
+            <a class="nav-link" routerLink="/home/reference">Form</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Chat Room</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <div class="row justify-content-center">
+    <h1>Jordan Garske</h1>
+    
+  </div>
+  <div class="row justify-content-center">
+    <h4>21 / fargo - north dakota / computer science</h4>
+  </div>
+</div>
 
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-  <div  id="spacer"></div>
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
