--- a/angular/resup/src/app/navbar-folder/home/home.component.scss
+++ b/angular/resup/src/app/navbar-folder/home/home.component.scss
@@ -1,39 +1,7 @@
-* {
-  background-color: #161616;
+*{
+  background-color: #050c1a;
 }
+
 p{
   color: aliceblue;
-}
-.qualificationResumeContainer {
-  display: grid;
-  grid-template-columns: repeat(64, 1fr); /* Two columns */
-  grid-template-rows: auto auto; /* Two rows, adjust as needed */
-  gap: 10px; /* Adjust the gap between items as needed */
-}
-
-.qualificationResumeContainerBox:nth-child(1) {
-  grid-column: 1 / span 4;
-  grid-row: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  i {
-    color:   #4EB981;
-}
-}
-
-
-.qualificationResumeContainerBox:nth-child(2) {
-  grid-column: 5/ span 19;
-  grid-row: 1; /* Second row */
-}
-
-.qualificationResumeContainerBox:nth-child(3) {
-  grid-column:24 / span 40;
-  grid-row: 1; /* Second row */
-}
-
-.qualificationResumeContainerBox:nth-child(4) {
-  grid-column: 5 / span 59; /* Span two columns */
-  grid-row: 2; /* Third row */
 }
