--- a/angular/resup/src/app/navbar-folder/home/resume-qualification/resume-qualification.component.scss
+++ b/angular/resup/src/app/navbar-folder/home/resume-qualification/resume-qualification.component.scss
@@ -1,70 +1,49 @@
-/* */
-.containers{
-    display: flex;    
-    background-color: #161616;
-    .information:nth-child(1) {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        flex: 10%;
-      }
-    .information:nth-child(2) {
-        flex: 60%;
-      }
-      
-      .information:nth-child(3) {
-        flex: 20%;
-      }
-    div{
-        color: aliceblue;
-       
-        div{
-            margin: 4px;
-            background-color: #161616;
-            p{
-              color:   #4EB981;
-            }
-        }
-        .work-knowledge{
-            color:   #69e7a6;
-        }
-    }
+li {
+  color: #6a6c6e;
+}
 
-   
+p,
+h1,
+h4 {
+  color: aliceblue;
 }
-li{
-    color:   #acacac;
+
+h6 {
+  color: #6a6c6e;
+  font-size: 12px;
 }
-p{
-    color: aliceblue;
+
+#spacer {
+  background-color: #6a6c6e;
+  height: 1px;
+  width: 100%;
 }
-h1{
-    color:yellow;
-}
-h4{
-    color:   #69e7a6;
-}
-h6{
-    color: aliceblue;
-    font-size: 12px;
-    
-}
-#spacer{
-    background-color: rgb(47, 137, 92);
-    height: 1px;
-    width: 100%;
-}
-.information 
- 
-  /* Hover effect with shadow */
-img {
-    box-shadow: 0 0 10px rgba(66, 62, 62, 0.9); /* Adjust the shadow values as needed */
-  }
+
 i {
-    color:   #4EB981;
+  color: #4eb981;
 }
-footer{
-    height: 100%;
-    width: 100%;
-    background-color: #161616;
+
+footer {
+  height: 100%;
+  width: 100%;
+  background-color: #161616;
+}
+
+.hover-box {
+  background: #161816;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.spacing-margin {
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+
+.hover-box:hover {
+  border: 1px solid #4eb981;
+  /* Add a border style and width */
 }
