--- a/angular/resup/src/app/navbar/navbar.component.scss
+++ b/angular/resup/src/app/navbar/navbar.component.scss
@@ -1,9 +1,20 @@
-nav{
+*{
+    color: rgb(8, 8, 8);
+}
+.bg-img {
+    /* The image used */
+    background-image: url("../../assets/mount.avifa");
+  
+    min-height: 380px;
+    
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100;
+    /* Needed to position the navbar */
     position: relative;
-    background-color: black;
-}
-#spacer{
-    background-color: rgb(24, 43, 34);
-    height: 1px;
-    width: 100%;
-}
+  }
+  .cool{
+    border: 10px red;
+  }
