--- a/angular/resup/src/app/navbar-folder/home/home.component.html
+++ b/angular/resup/src/app/navbar-folder/home/home.component.html
@@ -1,5 +1,5 @@
   <!-- Your HTML content -->
-
+  <app-night-sky></app-night-sky>
   <div class="qualificationResumeContainer  ">
 
     <div class="qualificationResumeContainerBox">
