--- a/angular/resup/src/app/navbar-folder/home/home_components/projects/projects.component.html
+++ b/angular/resup/src/app/navbar-folder/home/home_components/projects/projects.component.html
@@ -1,10 +1,22 @@
 <div id="spacer"></div>
 <div>
     <h1>work history</h1>
-    <h4>PRODUCT MANAGMMENT APPLICATION CO-OP, FARGO ND</h4>
+    <h3>PRODUCT MANAGMMENT APPLICATION CO-OP, FARGO ND</h3>
     <p>From 01/2023 to 12/2023</p>
-  </div>
+    <p>
+      Created customized reports tailored to the specific needs of product management, providing valuable insights for strategic decision-making.
 
+      Led a comprehensive data cleaning initiative, optimizing the usability of products that were previously non-functional, resulting in enhanced user experience.
+  
+      Successfully addressed and resolved issues within MongoDB, ensuring the integrity and reliability of the database system.
+  
+      Developed and implemented streamlined processes to significantly reduce the time required for report generation and execute monthly updates efficiently.
+  
+      Collaborated with cross-functional teams to enhance data quality and accuracy, contributing to the overall improvement of data-driven decision-making processes.
+  
+      Played a key role in optimizing implementation timelines, fostering a more efficient and agile workflow for creating reports and executing monthly updates.
+    </p>
+  </div>
 <h1>Projects</h1>
 <div class="container-fluid">
     <div class="row">
