--- a/angular/resup/src/app/navbar-folder/home/home_components/resume-qualification/resume-qualification.component.html
+++ b/angular/resup/src/app/navbar-folder/home/home_components/resume-qualification/resume-qualification.component.html
@@ -3,25 +3,25 @@
     <div class="col-md-5 d-flex flex-column hover-box spacing-margin">
       <i class="fas fa-laptop"></i>
       <h4>Languages</h4>
-      <h6>Java, Python, Rust, TypeScript, JavaScript, C#, and Visual Basic</h6>
+      <h6>Java, Python, Rust, TypeScript, JavaScript, C#, C++ and Visual Basic</h6>
     </div>
     <div class="col-md-5 d-flex flex-column hover-box spacing-margin">
       <i class="fab fa-uncharted"></i>
 
       <h4>Other</h4>
-      <h6>Angular, Postgres, Django, Rocket, and Diesel</h6>
+      <h6>Angular, Postgres, Django, Rocket, MongoDB, and Diesel</h6>
     </div>
   </div>
   <div class="row justify-content-center">
     <div class="col-md-5 d-flex flex-column hover-box spacing-margin spacing-margin">
       <i class="fas fa-bolt"></i>
-      <h4>Other</h4>
-      <h6>Angular, Postgres, Django, Rocket, and Diesel</h6>
+      <h4>unique libary</h4>
+      <h6>netDXF, autoCAD libary</h6>
     </div>
     <div class="col-md-5 d-flex flex-column hover-box spacing-margin">
       <i class="fas fa-question"></i>
-      <h4>Thing</h4>
-      <h6>Temp, Temp, Temp, and Temp</h6>
+      <h4>technologies</h4>
+      <h6>AWS, Docke, Linux, git, oracle alaytics cloud, Azura</h6>
     </div>
   </div>
 </div>
