--- a/angular/resup/src/app/navbar-folder/reference-form/reference-form.component.html
+++ b/angular/resup/src/app/navbar-folder/reference-form/reference-form.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <h2 class="mb-4">Job Reference Form</h2>
-  
+      <h3>{{resultText}}</h3>
     <form>
       <div class="form-group">
         <label for="referenceText">Reference Text</label>
