--- a/angular/resup/src/app/navbar/navbar.component.html
+++ b/angular/resup/src/app/navbar/navbar.component.html
@@ -1,7 +1,10 @@
+
+
+
 <div class="container-fuild bg-img w-100">
   <div class="row justify-content-center">
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" routerLink="/home">Rustume</a>
+      
       <button
         class="navbar-toggler"
         type="button"
@@ -15,6 +18,17 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+      </div>
+    </nav>
+  </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" routerLink="/home">Rust-ume</a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" routerLink="/home"
@@ -22,23 +36,24 @@
             >
           </li>
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/home/roadmap">Roadmap</a>
+            <a class="nav-link" routerLink="/home/roadmap">history</a>
           </li>
           <li *ngIf="canWriteRef" class="nav-item">
             <a class="nav-link" routerLink="/home/reference">Form</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Chat Room</a>
+            <a class="nav-link" routerLink="/home/chat-room">Chat Room</a>
           </li>
         </ul>
-      </div>
-    </nav>
-  </div>
-  <div class="row justify-content-center">
+      </ul>
+    </div>
+    
+  </nav>
+  <div class="row justify-content-center Jordan">
     <h1>Jordan Garske</h1>
     
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center Garske">
     <h4>21 / fargo - north dakota / computer science</h4>
   </div>
 </div>
